--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -12,8 +12,6 @@ html {
     }
 }
 
-html
-
 body {
     background-color: var(--bg);
     margin: 0px;
@@ -173,6 +171,10 @@ main {
                     }
                 }
             }
+        }
+
+        #page_switcher{
+            
         }
     }
 
