cached for pythonanywhere

--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -174,7 +174,13 @@ main {
         }
 
         #page_switcher{
-            
+            ol {
+                list-style-type: none;
+                #current_page_index {
+                    border-radius: 3px;
+                    border-color: var(--primary-color);
+                }
+            }
         }
     }
 
