--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -201,6 +201,7 @@ main {
         @media screen and (max-width: 980px) {
             width: 100%;
             float: none;
+            margin-top: 20px;
         }
         aside {
             margin-bottom: 15px;
