--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -174,6 +174,8 @@ main {
         }
 
         #page_switcher{
+            position: absolute;
+            bottom: 0px;
             ol {
                 list-style-type: none;
                 li {
