--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -182,6 +182,8 @@ main {
                 display: inline-block;
                 list-style-type: none;
                 li {
+                    font-family: 'Cabin';
+                    font-size: 15px; 
                     float: left;
                     height: 25px;
                     width: 25px;
