cached for pythonanywhere

--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -181,6 +181,7 @@ main {
             bottom: 0px;
             margin: 0px;
             text-align: center;
+            display: inline-block;
             ol {
                 display: inline-block;
                 list-style-type: none;
