cached for pythonanywhere

--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -121,8 +121,10 @@ main {
     &>header {
         h2 {
             font-family: 'Cabin';
-            font-size: 21px;
+            font-size: 24px;
+            font-weight: bold;
             color: var(--secondary-color);
+            margin: 0;
         }
         h4 {
 
