--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -105,6 +105,7 @@ a {
 main {
     width: 80%;
     padding-top: 30px;
+    padding-bottom: 20px;
     display: inline-block;
 
     @media screen and (max-width: 980px) {
