--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -61,7 +61,14 @@ a {
         height: 100px;
         width: auto;
     }
-
+    #nav_toggle_bt {
+        display: none;
+        @media screen and (max-width: 964px) {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+        }
+    }
     nav {
         float: right;
         display: inline-block;
@@ -70,14 +77,6 @@ a {
         text-decoration: none;
         font-size: 18px;
         margin: 24px 0px 24px 0px;
-        button {
-            display: none;
-            @media screen and (max-width: 964px) {
-                display: inline-block;
-                width: 50px;
-                height: 50px;
-            }
-        }
         #nav_list {
             margin: 0px;
             list-style-type: none;
@@ -141,6 +140,9 @@ main {
 
         width: 70%;
         float: left;
+        &.container {
+            padding-left: 0;
+        }
         @media screen and (max-width: 980px) {
             width: 100%;
             float: none;
