--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -304,7 +304,18 @@ main {
                     color: #FFFFFF;
                 }
             }
-            #tags_list {
+            &#search-box {
+                form {
+                    &->input{
+                        &[type="search"] {
+                            &::placeholder {
+                                
+                            }
+                        }
+                    }
+                }
+            }
+            &#tags_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-left: 1%;
                     width: 48%;
@@ -331,7 +342,7 @@ main {
                     }
                 }
             }
-            #recent-posts_list {
+            &#recent-posts_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-right: 1%;
                     width: 48%;
