--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -306,10 +306,10 @@ main {
             }
             &#search-box {
                 form {
-                    &->input{
+                    &>input{
                         &[type="search"] {
                             &::placeholder {
-                                
+
                             }
                         }
                     }
