--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -304,7 +304,7 @@ main {
                     color: #FFFFFF;
                 }
             }
-            &#search-box {
+            #search-box {
                 form {
                     &>input{
                         &[type="search"] {
@@ -315,7 +315,7 @@ main {
                     }
                 }
             }
-            &#tags_list {
+            #tags_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-left: 1%;
                     width: 48%;
@@ -342,7 +342,7 @@ main {
                     }
                 }
             }
-            &#recent-posts_list {
+            #recent-posts_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-right: 1%;
                     width: 48%;
