--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -350,7 +350,7 @@ main {
                     }
                 }
             }
-            #recent-posts_list {
+            &#recent-posts_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-right: 1%;
                     width: 48%;
