--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -323,6 +323,31 @@ main {
                     }
                 }
             }
+            &#recent-posts_list {
+                @media screen and (min-width: 480px) and (max-width: 980px) {
+                    margin-right: 1%;
+                    width: 48%;
+                }
+                padding-left: 22px;
+                li {
+                    font-family: var(--second-font);
+                    font-size: 13.4px;
+                    padding-bottom: 4px;
+                    a {
+                        position: relative;
+                        left: 3px;
+
+                        text-decoration: none;
+                        font-size: 14.6px;
+                        font-weight: normal;
+                        color: var(--primary-color);
+                        &:hover {
+                            transition: color 0.2s;
+                            color: var(--secondary-color);
+                        }
+                    }
+                }
+            }
             &#tags_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-left: 1%;
@@ -350,7 +375,6 @@ main {
                     }
                 }
             }
-            
         }
 
     }
