--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -309,6 +309,7 @@ main {
                 form {
                     #search_box_widget{
                         [name="search_box"] {
+
                         }
                         [name="submit"]{
                             float: right;
@@ -348,7 +349,7 @@ main {
                     }
                 }
             }
-            &#tags_list {
+            /*&#tags_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-left: 1%;
                     width: 48%;
@@ -374,9 +375,8 @@ main {
                         }
                     }
                 }
-            }
+            }*/
         }
-
     }
 }
 
