--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -324,7 +324,7 @@ main {
                     }
                 }
             }
-            &#recent-posts_list {
+            #recent-posts_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-right: 1%;
                     width: 48%;
@@ -349,7 +349,7 @@ main {
                     }
                 }
             }
-            /*&#tags_list {
+            &#tags_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-left: 1%;
                     width: 48%;
@@ -375,7 +375,7 @@ main {
                         }
                     }
                 }
-            }*/
+            }
         }
     }
 }
