--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -349,7 +349,7 @@ main {
                     }
                 }
             }
-            &#tags_list {
+            #tags_list {
                 @media screen and (min-width: 480px) and (max-width: 980px) {
                     margin-left: 1%;
                     width: 48%;
