--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -312,7 +312,7 @@ main {
                             height: 40px;
                             width: calc(100% - 40px);
                         }
-                        [name="submit"]{
+                        [type="submit"]{
                             height: 40px;
                             width: 40px;
                             float: right;
