--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -306,7 +306,6 @@ main {
             }
             &#search-box {
                 background-color: var(--primary-color);
-                border
                 form {
                     #search_box_widget{
                         [name="search_box"] {
@@ -318,7 +317,7 @@ main {
                                 border-style: none;
                             }
                         }
-                        [type="submit"]{
+                        #submit
                             height: 40px;
                             width: 40px;
                             float: right;
