--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -317,7 +317,7 @@ main {
                                 border-style: none;
                             }
                         }
-                        #submit
+                        #submit {
                             height: 40px;
                             width: 40px;
                             float: right;
