--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -325,6 +325,7 @@ main {
                             border-style: none;
                             color: var(--bg-color);
                             &:focus {
+                                outline: 0;
                                 border-style: none;
                             }
                         }
