--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -321,7 +321,7 @@ main {
                             height: 40px;
                             width: 40px;
                             float: right;
-                            padding: 3;
+                            padding: 3px;
 
                             border-style: none;
                             color: var(--bg-color);
