--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -343,9 +343,12 @@ main {
                     #additional_options{
                         background-color: var(--primary-color);
                         width: 100%;
-                        ul>li {
-                            &#checkbox_description {
-                                vertical-align: middle;
+                        ul {
+                            list-style-type: none;
+                            &>li {
+                                &#checkbox_description {
+                                    vertical-align: middle;
+                                }
                             }
                         }
                     }
