--- a/blog/assets/css/main_style.scss
+++ b/blog/assets/css/main_style.scss
@@ -342,6 +342,7 @@ main {
                     }
                     #additional_options{
                         background-color: var(--primary-color);
+                        margin: 3px 0px;
                         width: 100%;
                         ul {
                             margin: 5px 0px;
